# ML-for-econo---Student-s-dropout-and-academic-success

./: .gitignore  2 - Heterogeneous effects ddml proba dropout.ipynb  2 - Quantile regression proba dropout.ipynb  3 - Double Post Lasso.ipynb  4_flexible_models_scholarship_dropout.ipynb  5_cate_policy_learning copy.ipynb  5_cate_policy_learning.ipynb  6 - HTE (gender, grades, courses).ipynb  README.md  Stats-desc-application-order.ipynb  main.py  pyproject.toml
docs/: README_docs.md
ml_for_econo_student_s_dropout_and_academic_success.egg-info/: PKG-INFO
outputs/: 2 - Results_Summary_Table.tex
theoretical/: DAG.ipynb  PICO.md
