[project]
name = "ml-for-econo-student-s-dropout-and-academic-success"
version = "0.1.0"
description = "ML for Econometrics course project applying machine learning and causal inference methods to analyze student dropout and academic success."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "numpy>=2.0.0",
    "pandas>=3.0.1",
    "scikit-learn>=1.6.0",
    "scipy>=1.15.0",
    "seaborn>=0.13.2",
    "ucimlrepo>=0.0.7",
    "networkx>=3.4",
    "pgmpy>=0.1.26",
    "doubleml>=0.9.0",
    "skrub>=0.5.0",
    "econml>=0.16.0",
]
